# guidance_instructor

./: README.md  pyproject.toml
src/guidance_instructor/: __init__.py  guidance_instructor.py
tests/: conftest.py
tests/extraction/: test_basics.py
